fix scrolling on mobile

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -140,3 +140,7 @@
   left: auto;
   right: 20px;
 }
+
+body.fancybox-is-open{
+  overflow: hidden;
+}
